<resources>
    <string name="app_name">Dudu</string>
    <string name="channel_id">dudu_channel</string>
    <string name="channel_name">dudu channel</string>
    <string name="channel_description">dudu channel</string>
    <string name="notification_title">Дела на сегодня</string>
    <plurals name="notification_content">
        <item quantity="one">Сегодня вам надо сделать %d задачу, не забудьте =)</item>
        <item quantity="two">Сегодня вам надо сделать %d задачи, не забудьте =)</item>
        <item quantity="few">Сегодня вам надо сделать %d задачи, не забудьте =)</item>
        <item quantity="many">Сегодня вам надо сделать %d задач, не забудьте =)</item>
        <item quantity="other">Сегодня вам надо сделать %d задач, не забудьте =)</item>
    </plurals>
    <string name="main_title">Мои дела</string>
    <string name="main_completed_label">Выполнено: %d</string>
    <string name="main_visibility_btn_desc">Показать/скрыть</string>
    <string name="main_theme_mode_btn_desc">Сменить тему приложения</string>
    <string name="main_add_task_btn_desc">Создать задачу</string>
    <string name="main_task_removed_message">Задача удалена</string>
    <string name="main_task_removed_action">Отменить</string>
    <string name="main_task_restored_message">Задача восстановлена</string>
    <string name="main_empty_label">Задач пока нет =)</string>
    <string name="main_unknown_error_message">Произошла ошибка. Попробуйте позже</string>
    <string name="main_task_removing_message">Вы действительно хотите удалить задачу?</string>
    <string name="main_task_removing_positive">Да</string>
    <string name="main_task_removing_negative">Отмена</string>
    <string name="main_task_removed">Задача удалена</string>

    <string name="create_task_menu_action_save">Сохранить</string>
    <string name="create_task_input_hint">Что надо сделать…</string>
    <string name="create_task_priority_high">!! Высокий</string>
    <string name="create_task_priority_low">Низкий</string>
    <string name="create_task_priority_none">Нет</string>
    <string name="create_task_priority_label">Важность</string>
    <string name="create_task_btn_remove">Удалить</string>
    <string name="create_task_btn_reset">Очистить</string>
    <string name="create_task_deadline_label">Сделать до</string>
    <string name="create_task_description_error">Введите пожалуйста описание задачи =)</string>
    <string name="create_task_loading_message">Подождите немного</string>

    <string name="task_short">Проверка короткого таска</string>
    <string name="task_normal">Проверка таска средней длины. И так, проверим</string>
    <string name="task_long">Проверка длинного таска. Здесь надо написать очень много текста, чтобы можно было проверить, что происходит с текстом в такой ситуации</string>
</resources>