<?xml version="1.0" encoding="utf-8"?>
<com.example.dudu.util.CollapsibleToolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ctToolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="56dp"
    app:layoutDescription="@xml/main_header_layout_scene"
    app:layout_scrollFlags="scroll|exitUntilCollapsed">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/LargeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_title"
        android:transformPivotX="0dp"
        android:transformPivotY="16dp" />

    <TextView
        android:id="@+id/tvCompleted"
        style="@style/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_completed_label"
        android:textColor="@color/label_tertiary" />

    <ImageButton
        android:id="@+id/ibVisibility"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/btn_visibility"
        android:contentDescription="@string/main_visibility_btn_desc" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="56dp" />
</com.example.dudu.util.CollapsibleToolbar>